---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%STRUCT1 = type { i32 }

@MyStruct = unnamed_addr constant %STRUCT1 { i32 99 }
@__STRUCT1__init = unnamed_addr constant %STRUCT1 zeroinitializer

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %local_value = alloca i32, align [filtered]
  store i32 0, i32* %local_value, align [filtered]
  store i32 0, i32* %main, align [filtered]
  %load_value = load i32, i32* getelementptr inbounds (%STRUCT1, %STRUCT1* @MyStruct, i32 0, i32 0), align [filtered]
  store i32 %load_value, i32* %local_value, align [filtered]
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}
